--- a/templates/psql/list.html
+++ b/templates/psql/list.html
@@ -1,55 +1,53 @@
 {% load i18n %}
 {% load static %}
 
-<div class="bg-white border shadow-sm rounded-10 p-3">
-    <div class="table-responsive-md">
-        <table class="table table-striped align-middle">
-            <thead>
+<div class="table-responsive-md">
+    <table class="table align-middle">
+        <thead>
+        <tr>
+            <th>{% translate 'Name' %}</th>
+            <th>{% translate 'User' %}</th>
+            <th>{% translate 'Password' %}</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+            {% for database in databases %}
             <tr>
-                <th>{% translate 'Name' %}</th>
-                <th>{% translate 'User' %}</th>
-                <th>{% translate 'Password' %}</th>
-                <th></th>
+                <td>{{database.name}}</td>
+                <td>{{database.username}}</td>
+                <td>
+                    <div class="blur-group input-group input-group-sm">
+                        <input class="blur-text blured-text form-control rounded-start-pill" value="{{database.password}}" readonly>
+                        <button type="button" class="remove-blur btn btn-warning" data-text="{{database.password}}">
+                            <i class="bi bi-eye"></i>
+                        </button>
+                        <button type="button" class="copy-this pointer btn btn-dark rounded-end-pill" onclick="copy_this('{{database.password}}')">
+                            <i class="bi bi-clipboard"></i>
+                        </button>
+                    </div>
+                </td>
+                <td>
+                    <div class="dropdown">
+                        <i class="bi bi-three-dots-vertical float-end pointer" data-bs-toggle="dropdown"></i>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li>
+                               <a href="{% url 'psql_database_download' database.serial %}" class="dropdown-item" target="_blank">
+                                    {% trans 'Download' %}
+                                    <i class="bi bi-download float-end"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'psql_database_delete' database.serial %}')">
+                                    {% trans 'Delete' %}
+                                    <i class="bi bi-trash float-end"></i>
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
             </tr>
-            </thead>
-            <tbody>
-                {% for database in databases %}
-                <tr>
-                    <td>{{database.name}}</td>
-                    <td>{{database.username}}</td>
-                    <td>
-                        <div class="blur-group input-group input-group-sm">
-                            <input class="blur-text blured-text form-control" value="{{database.password}}" readonly>
-                            <button type="button" class="remove-blur btn btn-warning" data-text="{{database.password}}">
-                                <i class="bi bi-eye"></i>
-                            </button>
-                            <button type="button" class="copy-this pointer btn btn-dark" onclick="copy_this('{{database.password}}')">
-                                <i class="bi bi-clipboard"></i>
-                            </button>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="dropdown">
-                            <i class="bi bi-three-dots-vertical float-end pointer" data-bs-toggle="dropdown"></i>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li>
-                                   <a href="{% url 'psql_database_download' database.serial %}" class="dropdown-item" target="_blank">
-                                        {% trans 'Download' %}
-                                        <i class="bi bi-download float-end"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'psql_database_delete' database.serial %}')">
-                                        {% trans 'Delete' %}
-                                        <i class="bi bi-trash float-end"></i>
-                                    </span>
-                                </li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
