--- a/templates/app/apps.html
+++ b/templates/app/apps.html
@@ -11,85 +11,108 @@
     <i class="bi bi-rocket-takeoff"></i>
 </a>
 {% endif %}
-{% if status.uwsgi_status %}
-<a class="btn btn-warning btn-sm rounded-pill" href="{% url 'uwsgi_restart' %}" data-bs-toggle="tooltip" title="{% translate 'Restart uwsgi' %}">
-    {% translate 'Uwsgi' %}
-    <i class="bi bi-arrow-clockwise"></i>
-</a>
-{% else %}
-<button id="install-uwsgi" class="install-server btn btn-warning btn-sm rounded-pill" data-name="uwsgi">
-    {% translate 'Install uwsgi' %}
-    <i class="bi bi-play"></i>
-</button>
-{% endif %}
-{% if status.nginx_status %}
-<a class="btn btn-info btn-sm rounded-pill" href="{% url 'nginx_restart' %}" data-bs-toggle="tooltip" title="{% translate 'Restart nginx' %}">
-    {% translate 'Nginx' %}
-    <i class="bi bi-arrow-clockwise"></i>
-</a>
-{% else %}
-<button id="install-nginx" class="install-server btn btn-info btn-sm rounded-pill" data-name="nginx">
-    {% translate 'Install nginx' %}
-    <i class="bi bi-play"></i>
-</button>
-{% endif %}
-<button type="button" class="btn btn-danger btn-sm rounded-pill" id="restart-server" data-bs-toggle="tooltip" title="{% translate 'Restart server' %}">
-    {% translate 'Server' %}
-    <i class="bi bi-power"></i>
-</button>
+
+<span class="dropdown">
+    <button class="btn btn-secondary btn-sm rounded-pill" type="button" id="dropdownRestart" data-bs-toggle="dropdown" aria-expanded="false">
+        {% translate 'Restart' %}
+        <i class="bi bi-three-dots-vertical"></i>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownRestart">
+        {% if status.uwsgi_status %}
+        {% if status.nginx_status %}
+        <li>
+            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'nginx_restart' %}', '{% trans 'Restart' %}', '{% translate 'Nginx server will be restarted immediately and al apps will be stopped until restarting' %}')">
+                {% translate 'Nginx' %}
+                <i class="bi bi-hdd-network float-end"></i>
+            </span>
+        </li>
+        <li><hr class="dropdown-divider"></li>
+        {% endif %}
+        <li>
+            <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'uwsgi_restart' %}', '{% trans 'Restart' %}', '{% translate 'Uwsgi server will be restarted immediately and al apps will be stopped until restarting' %}')">
+                {% translate 'Uwsgi' %}
+                <i class="bi bi-hdd-stack float-end"></i>
+            </span>
+        </li>
+        <li><hr class="dropdown-divider"></li>
+        {% endif %}
+        <li>
+            <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'server_restart' %}', '{% trans 'Restart' %}', '{% trans 'The server will be restarted immediately and al apps will be stopped until restarting' %}')">
+                {% translate 'Server' %}
+                <i class="bi bi-power float-end"></i>
+            </span>
+        </li>
+    </ul>
+</span>
 {% endblock %}
 {% block content %}
-<div class="bg-white shadow-sm rounded">
-    {% if status.uwsgi_status and status.nginx_status %}
-        {% if apps %}
+{% if status.uwsgi_status and status.nginx_status %}
+    {% if apps %}
+    <div class="bg-white shadow-sm rounded">
         {% include 'app/list.html' %}
-        {% else %}
-        <div class="h5 text-center p-3">
-            {% trans 'No apps found' %}
-            <div class="">
-                <a href="{% url 'app_new' %}">
-                    <i class="bi bi-folder-plus fs-1"></i>
-                </a>
-            </div>
-        </div>
-        {% endif %}
+    </div>
+    {% include 'inc/paginator.html' with query=apps %}
     {% else %}
+    <div class="h5 text-center p-3">
+        {% trans 'No apps found' %}
+        <div class="">
+            <a href="{% url 'app_new' %}">
+                <i class="bi bi-folder-plus fs-1"></i>
+            </a>
+        </div>
+    </div>
+    {% endif %}
+{% else %}
+    <div class="bg-white shadow-sm rounded">
         <div class="h5 text-center p-3">
             {% trans 'You need to install uwsgi and nginx first' %}
+            <div class="mt-3">
+                {% if not status.nginx_status %}
+                <button id="install-nginx" class="install-server btn btn-info rounded-pill" data-name="nginx">
+                    {% translate 'Install nginx' %}
+                    <i class="bi bi-play"></i>
+                </button>
+                {% endif %}
+                {% if not status.uwsgi_status %}
+                <button id="install-uwsgi" class="install-server btn btn-warning rounded-pill" data-name="uwsgi">
+                    {% translate 'Install uwsgi' %}
+                    <i class="bi bi-play"></i>
+                </button>
+                {% endif %}
+            </div>
         </div>
-
-    <script>
-        jQuery(document).ready(function () {
-            jQuery(".install-server").click(function(event) {
-                jQuery('.loading-preloader').show();
-                server_name = jQuery(this).data('name');
-                jQuery.ajax({
-                    type: "POST",
-                    data: {
-                        'csrfmiddlewaretoken': '{{csrf_token}}',
-                        [server_name + '_install']: true
-                    },
-                    success: function (response) {
-                        jQuery('.loading-preloader').hide();
-                        Swal.fire({
-                            icon: response.success ? 'success' : 'error',
-                            text: response.message,
-                            allowOutsideClick: false,
-                        }).then((result) => {
-                            if (result.isConfirmed) {
-                                window.location.href = "{% url 'apps' %}"
-                            }
-                        });
-                    },
-                    error: function () {
-                        jQuery('.loading-preloader').hide();
-                        alert('{% trans "An error occurred while submitting the form" %}');
-                    }
-                });
+    </div>
+<script>
+    jQuery(document).ready(function () {
+        jQuery(".install-server").click(function(event) {
+            jQuery('.loading-preloader').show();
+            server_name = jQuery(this).data('name');
+            jQuery.ajax({
+                type: "POST",
+                data: {
+                    'csrfmiddlewaretoken': '{{csrf_token}}',
+                    [server_name + '_install']: true
+                },
+                success: function (response) {
+                    jQuery('.loading-preloader').hide();
+                    Swal.fire({
+                        icon: response.success ? 'success' : 'error',
+                        text: response.message,
+                        allowOutsideClick: false,
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = "{% url 'apps' %}"
+                        }
+                    });
+                },
+                error: function () {
+                    jQuery('.loading-preloader').hide();
+                    alert('{% trans "An error occurred while submitting the form" %}');
+                }
             });
         });
+    });
 
-    </script>
-    {% endif %}
-</div>
+</script>
+{% endif %}
 {% endblock %}
