--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -6,8 +6,8 @@
             <th>{% translate 'Name' %}</th>
             <th>{% translate 'Domain' %}</th>
             <th>{% translate 'Port' %}</th>
-            <th>{% translate 'Path' %}</th>
-            <th>{% translate 'SSL' %}</th>
+            <th style="min-width: 300px">{% translate 'Path' %}</th>
+            <th style="width: 150px">{% translate 'SSL' %}</th>
             <th></th>
         </tr>
         </thead>
@@ -25,13 +25,13 @@
                 <td>{{app.port}}</td>
                 <td>
                     <div class="blur-group input-group input-group-sm">
-                        <input type="text" class="form-control form-control-sm rounded-start-pill" value="{{app.www_path}}" readonly dir="ltr" onclick="copy_this(this.value)">
-                        <button type="button" class="btn btn-warning rounded-end-pill" onclick="copy_this('{{app.www_path}}')" data-bs-toggle="tooltip" title="{% trans 'Copy path' %}">
-                            <i class="bi bi-folder"></i>
-                        </button>
-                        <button type="button" class="btn btn-warning rounded-end-pill" onclick="copy_this('source {{app.venv_path}}/bin/activate && cd {{app.www_path}}')" data-bs-toggle="tooltip" data-bs-placement="top" title="{% trans '' %}">
+                        <input type="text" class="form-control form-control-sm rounded-start-pill" value="{{app.www_path}}" readonly dir="ltr">
+                        <button type="button" class="btn btn-warning" onclick="copy_this('source {{app.venv_path}}/bin/activate && cd {{app.www_path}}')" data-bs-toggle="tooltip" data-bs-placement="top" title="{% trans 'Terminal environment command' %}">
                             <i class="bi bi-terminal"></i>
                         </button>
+                        <a href="{% url 'app_files' app.serial %}" class="btn btn-success rounded-end-pill" data-bs-toggle="tooltip" title="{% trans 'File manager' %}" target="_blank">
+                            <i class="bi bi-folder"></i>
+                        </a>
                     </div>
                 </td>
                 <td>
@@ -68,7 +68,7 @@
                             </li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
-                                <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'app_delete' app.serial %}')">
+                                <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'app_delete' app.serial %}')">
                                     {% trans 'Delete' %}
                                     <i class="bi bi-trash float-end"></i>
                                 </span>
