--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 
     <div class="row mt-4">
         <div class="col-md text-center text-md-start mb-3">{% translate 'All rights reserved' %} &copy; DPanel  - {% now 'Y' %}</div>
-        <div class="col-md text-center text-md-end"><b>DPanel  1.0</b> With <i class="far fa-heart text-danger"></i> proud by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
+        <div class="col-md text-center text-md-end"><b>DPanel 2.0</b> With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
     </div>
 </div>
 
