--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -1,71 +1,137 @@
 {% load i18n %}
-<div class="row g-3">
-    <div class="col">
-        <div class="row gx-3">
-            <a class="col-auto fw-bold" href="{% url 'apps' %}">{{config.company_name}}</a>
-            {% if request.user.is_authenticated %}
-            <a class="col-auto" href="{% url 'apps' %}">{% trans 'Apps' %}</a>
-            <a class="col-auto" href="{% url 'mysql_databases' %}">{% trans 'MySQL' %}</a>
-            <a class="col-auto" href="{% url 'psql_databases' %}">{% trans 'PostgreSQL' %}</a>
-            <a class="col-auto" href="{% url 'settings' %}">{% trans 'Settings' %}</a>
-            <a class="col-auto" href="{% url 'about' %}">{% trans 'About' %}</a>
-            <div class="col-auto disabled">{% trans 'Terminal' %}<small class="small text-muted">(soon)</small></div>
-            {% endif %}
-        </div>
-    </div>
-    <div class="col-auto">
-        {% if user.is_authenticated %}
-        <div class="dropdown d-inline-block me-2">
-            <div class="pointer"  id="dropdownProfile" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-person fs-5"></i>
+{% load static %}
+
+<div class="container">
+    <div class="bg-white rounded shadow-sm py-1 px-3 my-4">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="{% url 'apps' %}">{{config.company_name}}</a>
+            <button type="button" class="fs-4 navbar-toggler border-0 p-0 shadow-none" data-bs-toggle="offcanvas" data-bs-target="#MainNavbar">
+                <i class="bi bi-list pointer"></i>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="MainNavbar" aria-labelledby="MainNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="MainNavbarLabel">{{config.company_name}}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav">
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'apps' %}">
+                                {% trans 'Apps' %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'mysql_databases' %}">
+                                {% trans 'MySQL' %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'psql_databases' %}">
+                                {% trans 'PostgreSQL' %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'settings' %}">
+                                {% trans 'Settings' %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'about' %}">
+                                {% trans 'About' %}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">
+                                {% trans 'Terminal' %}
+                                <small class="small text-muted">(soon)</small>
+                            </a>
+                        </li>
+                        {% endif %}
+
+                    </ul>
+                </div>
             </div>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownProfile">
-                <li>
-                    <a class="dropdown-item disabled">
-                        {{request.user}}
-                        <i class="bi bi-person float-end"></i>
-                    </a>
-                </li>
-                <li class="dropdown-divider"></li>
-                <li>
-                    <a class="dropdown-item" href="{% url 'password_change' %}">
-                        {% translate 'Password' %}
-                        <i class="bi bi-shield-lock float-end"></i>
-                    </a>
-                </li>
-                <li class="dropdown-divider"></li>
-                <li>
-                    <a class="dropdown-item" href="{% url 'logout' %}">
-                        {% translate 'Logout' %}
-                        <i class="bi bi-box-arrow-right float-end"></i>
-                    </a>
-                </li>
+            <div>
+                        {% if user.is_authenticated %}
+                        <div class="dropdown dropdown-hover d-inline-block me-2">
+                            <div class="pointer"  id="dropdownProfile" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person fs-5"></i>
+                            </div>
+                            <ul class="dropdown-menu end-0 dropdown-menu-end" aria-labelledby="dropdownProfile">
+                                <li>
+                                    <a class="dropdown-item disabled">
+                                        {{request.user}}
+                                        <i class="bi bi-person float-end"></i>
+                                    </a>
+                                </li>
+                                <li class="dropdown-divider"></li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'password_change' %}">
+                                        {% translate 'Password' %}
+                                        <i class="bi bi-shield-lock float-end"></i>
+                                    </a>
+                                </li>
+                                <li class="dropdown-divider"></li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'logout' %}">
+                                        {% translate 'Logout' %}
+                                        <i class="bi bi-box-arrow-right float-end"></i>
+                                    </a>
+                                </li>
 
-            </ul>
-        </div>
-        {% endif %}
-
-        <div class="dropdown d-inline-block" title="{% trans 'Language' %}">
-            <div class="pointer" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-translate fs-5"></i>
-            </div>
-
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
-                {% for language in languages %}
-                <li>
-                    <a class="dropdown-item {% if language.code == LANGUAGE_CODE %} active{% endif %}" href="/{{ language.code }}/{{request.get_full_path_info|slice:'4:'}}">
-                        {{ language.name_local }}
-                    </a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-
-        <a href="https://www.paypal.com/paypalme/MSDDEVER" class="btn-min ms-2" data-bs-toggle="tooltip" title="{% translate 'Support the developer' %}" target="_blank">
-            <i class="bi bi-paypal fs-5"></i>
-            <div class="btn-min-text fw-bold">
-                {% translate 'Donate' %}
-            </div>
-        </a>
+                            </ul>
+                        </div>
+                        {% endif %}
+                        <div class="dropdown dropdown-hover d-inline-block" title="{% trans 'Language' %}">
+                            <div class="pointer" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-translate fs-5"></i>
+                            </div>
+                            <ul class="dropdown-menu end-0 dropdown-menu-end" aria-labelledby="dropdownLanguage">
+                                {% for language in languages %}
+                                <li>
+                                    <a class="dropdown-item {% if language.code == LANGUAGE_CODE %} active{% endif %}" href="/{{ language.code }}/{{request.get_full_path_info|slice:'4:'}}">
+                                        {{ language.name_local }}
+                                    </a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="dropdown dropdown-hover d-inline-block ms-2">
+                            <div class="pointer " id="dropdownDonate" data-bs-toggle="dropdown" aria-expanded="false">
+                                <div data-bs-toggle="tooltip" data-bs-target="#donateModal" title="{% translate 'Donate' %}">
+                                    <i class="bi bi-paypal fs-5"></i>
+                                </div>
+                            </div>
+                            <ul class="dropdown-menu end-0 dropdown-menu-end" aria-labelledby="dropdownDonate">
+                                <li>
+                                    <div class="text-center">
+                                        <div class="fw-bold">
+                                            {% translate 'Support the developer' %}
+                                        </div>
+                                    </div>
+                                </li>
+                                <li><div class="dropdown-divider"></div></li>
+                                <li>
+                                    <a class="dropdown-item text-center" href="http://ufly.cc/paydon" target="_blank">
+                                        <img src="{% static 'images/pp-logo.png' %}" class="w-100" alt="Donate at PayPal" />
+                                    </a>
+                                </li>
+                                <li><div class="dropdown-divider"></div></li>
+                                <li>
+                                    <a class="dropdown-item text-center" target="_blank" href="http://ufly.cc/buymeacoffee">
+                                        <img src="{% static 'images/bmc-button.png' %}" class="w-100" alt="Donate at buymeacoffee.com" />
+                                    </a>
+                                </li>
+                                <li><div class="dropdown-divider"></div></li>
+                                <li>
+                                    <a class="dropdown-item text-center" href='http://ufly.cc/kofi' target='_blank'>
+                                        <img src="{% static 'images/ko-fi.png' %}" class="w-100" alt='Donate at ko-fi.com' />
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+        </nav>
     </div>
 </div>
